--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "aos": "^2.3.4",
     "create-react-class": "^15.6.3",
     "dialog-polyfill": "^0.5.1",
     "prop-types": "^15.7.2",
