--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-shortcuts": "^2.1.0",
     "react-tappable": "^1.0.4"
   },
   "scripts": {
